<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
<android.support.v7.widget.Toolbar
    android:id="@+id/toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    app:title="@string/app_name"
    app:titleTextColor="@color/colorWhite"
    />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/view"
        android:layout_marginTop="16dp"
        android:paddingLeft="14dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="4dp"
            android:text="@string/text1"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <Button
            android:layout_width="87dp"
            android:layout_height="38dp"
            android:background="@drawable/button_type"
            android:text="@string/text7"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginLeft="@dimen/view"
        android:layout_marginTop="3dp"
        android:layout_marginRight="@dimen/view"
        android:background="@color/lineColor"
        android:paddingBottom="4dp"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/view"
        android:paddingLeft="14dp"
        android:paddingBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:text="@string/text2"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:text="@string/data_text1"
            android:textColor="@color/lineColor"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginLeft="@dimen/view"
        android:layout_marginRight="@dimen/view"
        android:background="@color/lineColor"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/view"
        android:paddingLeft="14dp"
        android:paddingBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:text="@string/text4"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:text="@string/data_text1"
            android:textColor="@color/lineColor"
            android:textSize="16sp" />

    </LinearLayout>

    <View

        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginLeft="@dimen/view"
        android:layout_marginRight="@dimen/view"
        android:background="@color/lineColor"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/view"
        android:paddingLeft="14dp"
        android:paddingBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:text="@string/text3"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:text="@string/data_text1"
            android:textColor="@color/lineColor"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginLeft="@dimen/view"
        android:layout_marginRight="@dimen/view"
        android:background="@color/lineColor"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/view"
        android:paddingLeft="14dp"
        android:paddingBottom="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingTop="7dp"
            android:text="@string/text5"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="7dp"
            android:text="@string/text6"
            android:textColor="@color/lineColor"
            android:textSize="16sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1.5dp"
        android:layout_marginLeft="@dimen/view"
        android:layout_marginRight="@dimen/view"
        android:background="@color/lineColor"></View>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:paddingLeft="14dp"
        android:paddingTop="7dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/long_text"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/view"
        android:layout_marginRight="@dimen/view"
        android:layout_marginTop="@dimen/view"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/pict" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/pict2" />
    </LinearLayout>

</LinearLayout>
